added time display functions and updates

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
-    <script src="sketch4.js"></script>
+    <script src="sketch5.js"></script>
+    <script src="classClock2.js"></script>
   </body>
 </html>
