refactored clock for masterclock class (working)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   </head>
 
   <body>
-    <script src="sketch5.js"></script>
+    <script src="sketch6.js"></script>
     <script src="classClock2.js"></script>
+    <script src="classClock.js"></script>
   </body>
 </html>
