--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
   <body>
     <script src="sketch6.js"></script>
-    <script src="classClock2.js"></script>
+    <script src="classSubClock.js"></script>
     <script src="classClock.js"></script>
+    <script src="classSubClock2.js"></script>
   </body>
 </html>
