--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
     <script src="classClock.js"></script>
     <script src="classSubClock2.js"></script>
 
-
-    <div class="options">
-      <div class="option">
-        <div class="emoji">🐪</div>
-        <div class="description"><a href="https://www.yoosunglee.xyz/">Single sketch</a></div>
+    <!-- <div class="main">
+      <div class="options">
+        <div class="option">
+          <div class="emoji">🐪</div>
+          <div class="description"><a href="https://www.yoosunglee.xyz/">Single sketch</a></div>
+        </div>
+    
+        <div class="option">
+          <div class="emoji">🐫</div>
+          <div class="description"><a href="https://www.yoosunglee.xyz/">Multi sketch</a></div>
+        </div>
       </div>
-  
-      <div class="option">
-        <div class="emoji">🐫</div>
-        <div class="description"><a href="https://www.yoosunglee.xyz/">Multi sketch</a></div>
-      </div>
-    </div>
+    </div> -->
 
 
   </body>
